Make grid responsive and avoid overflowing tags

--- a/src/app/modules/marketplace/components/modules-list/module-card/module-card.component.scss
+++ b/src/app/modules/marketplace/components/modules-list/module-card/module-card.component.scss
@@ -29,10 +29,9 @@
     color: var(--dark-grey);
 }
 
-.keywords-container {
-    position: absolute;
-    bottom: 5px;
-    left: 1rem;
+.module-card-actions {
+    align-self: center;
+    margin-top: auto;
 }
 
 .keyword-button {
