--- a/src/app/modules/marketplace/components/modules-list/modules-list.component.scss
+++ b/src/app/modules/marketplace/components/modules-list/modules-list.component.scss
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .marketplace-toolbar {
